name: hakase
version: 0
synopsis: Rock Paper Scissors server
description:
    Rock Paper Scissors server

homepage: https://github.com/lfairy/hakase
author: Chris Wong
maintainer: lambda.fairy@gmail.com
copyright: 2016 Chris Wong
license: Apache-2.0
category: Network, Web

build-type: Simple
cabal-version: >= 1.10
extra-source-files: README.md

library
    exposed-modules:
        Hakase.Client
        Hakase.Common
        Hakase.Server
    other-modules:
    build-depends:
        base >= 4.9 && < 5,
        aeson,
        bytestring,
        containers,
        exceptions,
        io-streams,
        network-simple,
        text,
        tf-random,
        transformers
    default-language: Haskell2010
    ghc-options: -Wall

source-repository head
    type: git
    location: https://github.com/lfairy/hakase.git
