name: hakase-client
version: 0
synopsis: Rock Paper Scissors system: client interface
description:
    Rock Paper Scissors system: client interface

homepage: https://github.com/lfairy/hakase
author: Chris Wong
maintainer: lambda.fairy@gmail.com
copyright: 2016 Chris Wong
license: Apache-2.0
category: Network, Web

build-type: Simple
cabal-version: >= 1.10
--extra-source-files: README.md

library
    exposed-modules:
        Hakase.Client
    other-modules:
    build-depends:
        base >= 4.9 && < 5,
        attoparsec,
        bytestring,
        exceptions,
        hakase-common,
        io-streams,
        optparse-applicative,
        network-simple,
        text,
        transformers
    default-language: Haskell2010
    ghc-options: -Wall

executable hakase-one-upper
    hs-source-dirs: examples
    main-is: OneUpper.hs
    build-depends: base, hakase-client
    default-language: Haskell2010
    ghc-options: -Wall

executable hakase-rock-star
    hs-source-dirs: examples
    main-is: RockStar.hs
    build-depends: base, hakase-client
    default-language: Haskell2010
    ghc-options: -Wall

source-repository head
    type: git
    location: https://github.com/lfairy/hakase.git
