name: hakase-common
version: 0
synopsis: Rock Paper Scissors system: core types and operations
description:
    Rock Paper Scissors system: core types and operations

homepage: https://github.com/lfairy/hakase
author: Chris Wong
maintainer: lambda.fairy@gmail.com
copyright: 2016 Chris Wong
license: Apache-2.0
category: Network, Web

build-type: Simple
cabal-version: >= 1.10

library
    exposed-modules:
        Hakase.Common
    other-modules:
        Hakase.Parse
        Hakase.Render
    build-depends:
        base >= 4.9 && < 5,
        attoparsec,
        bytestring,
        text
    default-language: Haskell2010
    ghc-options: -Wall

source-repository head
    type: git
    location: https://github.com/lfairy/hakase.git
