name: hakase-server
version: 0
synopsis: Rock Paper Scissors system: game server
description:
    Rock Paper Scissors system: game server

homepage: https://github.com/lfairy/hakase
author: Chris Wong
maintainer: lambda.fairy@gmail.com
copyright: 2016 Chris Wong
license: Apache-2.0
category: Network, Web

build-type: Simple
cabal-version: >= 1.10
--extra-source-files: README.md

library
    exposed-modules:
        Hakase.Server
    other-modules:
    build-depends:
        base >= 4.9 && < 5,
        attoparsec,
        bytestring,
        containers,
        exceptions,
        hakase-common,
        io-streams,
        network-simple,
        text,
        tf-random
    default-language: Haskell2010
    ghc-options: -Wall

source-repository head
    type: git
    location: https://github.com/lfairy/hakase.git
