name: hakase-server
version: 0
synopsis: Rock Paper Scissors system: game server
description:
    Rock Paper Scissors system: game server

homepage: https://github.com/lfairy/hakase
author: Chris Wong
maintainer: lambda.fairy@gmail.com
copyright: 2016 Chris Wong
license: Apache-2.0
category: Network, Web

build-type: Simple
cabal-version: >= 1.10

library
    exposed-modules:
        Hakase.Server
    other-modules:
        Hakase.Server.Arena
        Hakase.Server.Common
        Hakase.Server.State
        Paths_hakase_server
    build-depends:
        base >= 4.9 && < 5,
        acid-state,
        attoparsec,
        bytestring,
        containers,
        exceptions,
        hakase-common,
        io-streams,
        mtl,
        network,
        safecopy,
        text,
        tf-random
    default-language: Haskell2010
    ghc-options: -Wall

executable hakase-server
    hs-source-dirs: main
    main-is: Main.hs
    build-depends:
        base,
        acid-state,
        hakase-server,
        network-simple,
        optparse-applicative
    default-language: Haskell2010
    ghc-options: -Wall

source-repository head
    type: git
    location: https://github.com/lfairy/hakase.git
